data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3810.wast
;; 9. **Test with Conditionals Controlling `br_table` Index**:    - **Description**: Use conditionals to dynamically alter the index used in `br_table` instruction to test unpredictable branch targets.    - **Constraint Checked**: Conditional evaluation and dynamic index handling.    - **Edge Case Relation**: Verifies that the engine correctly manages indices that change due to runtime conditions.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (func $test 
      (block $exit
        (local.get 0)
        (i32.const 1)
        (i32.eq)
        (br_table $exit (block (i32.const 0) (call_indirect (type 0) (i32.const 0))))
      )
    )
  )
  "type mismatch"
)